--- a/guneyteletipUI/package.json
+++ b/guneyteletipUI/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
