UnitTestte "ORA-00933: SQL command not properly ended" hatası var

--- a/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
+++ b/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GT.Data.Service\GT.Data.Service.csproj" />
+    <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
   </ItemGroup>
 
 </Project>
