--- a/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
     <ProjectReference Include="..\GT.Persistance.infinity\GT.Persistance.infinity.csproj" />
+    <ProjectReference Include="..\GT.Repository.infinity\GT.Repository.infinity.csproj" />
+    <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Conditions\" />
+    <Folder Include="Model\Study\" />
   </ItemGroup>
 
 </Project>
