--- a/Backend/GuneyTeletip/GT.Persistance/GT.Persistance.csproj
+++ b/Backend/GuneyTeletip/GT.Persistance/GT.Persistance.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
-    <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
-    <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
   </ItemGroup>
 
 </Project>
