--- a/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
+++ b/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
     <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
+    <ProjectReference Include="..\GT.Persistance\GT.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Implementation\" />
     <Folder Include="Model\" />
   </ItemGroup>
 
