--- a/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
+++ b/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Persistance.Domain\GT.Persistance.Domain.csproj" />
   </ItemGroup>
 
 </Project>
