--- a/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
+++ b/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
+    <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
   </ItemGroup>
 
 </Project>
