--- a/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
+++ b/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
@@ -5,15 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Conditions\" />
     <Folder Include="Implementation\CompositeView\" />
-    <Folder Include="Models\Filter\" />
-    <Folder Include="Models\View\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
     <ProjectReference Include="..\GT.Persistance.Domain\GT.Persistance.Domain.csproj" />
+    <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
+    <ProjectReference Include="..\Util.Extensions\Util.Extensions.csproj" />
+    <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
   </ItemGroup>
 
 </Project>
