--- a/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
+++ b/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
@@ -9,6 +9,10 @@
     <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
     <ProjectReference Include="..\GT.Persistance\GT.Persistance.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
+    <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
+    <ProjectReference Include="..\Util.Extensions\Util.Extensions.csproj" />
+    <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
+    <ProjectReference Include="..\Util.Reflection\Util.Reflection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
