--- a/guneyteletipUI/angular.json
+++ b/guneyteletipUI/angular.json
@@ -24,10 +24,14 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              {
+                "input": "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              },
+              {
+                "input": "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+              },
               "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
