--- a/guneyteletipUI/package.json
+++ b/guneyteletipUI/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-cookie-service": "^3.0.4",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
