--- a/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "!@#$ssq322342020(jjwivoqs**8721fj9qieufhqweiu"
+  }
+
 }
+
