--- a/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
+++ b/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementation\CompositeView\" />
+    <Compile Remove="Implementation\CompositeView\**" />
+    <EmbeddedResource Remove="Implementation\CompositeView\**" />
+    <None Remove="Implementation\CompositeView\**" />
   </ItemGroup>
 
   <ItemGroup>
