--- a/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Implementation\" />
     <Folder Include="Model\Study\" />
   </ItemGroup>
 
