--- a/Backend/GuneyTeletip/GT.Repository.infinity/GT.Repository.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.Repository.infinity/GT.Repository.infinity.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Conditions\" />
+  </ItemGroup>
+
 </Project>
