--- a/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
+++ b/Backend/GuneyTeletip/GT.Test/GT.Test.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infinity\" />
+  </ItemGroup>
+
 </Project>
