--- a/guneyteletipUI/package.json
+++ b/guneyteletipUI/package.json
@@ -22,9 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
+    "bootstrap-select": "^1.13.17",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-select-dropdown": "^1.4.3",
     "ngx-spinner": "^9.0.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
@@ -35,9 +37,9 @@
     "@angular/cli": "~8.0.2",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,6 +51,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.4.3"
   }
 }
