--- a/guneyteletipUI/package.json
+++ b/guneyteletipUI/package.json
@@ -24,10 +24,12 @@
     "bootstrap": "^4.5.0",
     "bootstrap-select": "^1.13.17",
     "font-awesome": "^4.7.0",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ngx-bootstrap": "^5.6.1",
     "ngx-cookie-service": "^3.0.4",
     "ngx-select-dropdown": "^1.4.3",
     "ngx-spinner": "^9.0.2",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
