--- a/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,7 +9,10 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "Secret": "!@#$ssq322342020(jjwivoqs**8721fj9qieufhqweiu"
+  },
+  "ConnectionStrings": {
+    "Oracle_Db": "User Id=test_user;Password=protek_oracle_2020;Data Source=85.95.238.211:9003/xe;",
+    "Postgres_Db​": "​UserID=test_protek;Password=test123;Server=85.95.238.211;Port=9002;Database=guney_teletip_db;Integrated Security=true;Pooling=true;"
   }
-
 }
 
