--- a/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,11 +10,6 @@
     <ProjectReference Include="..\GT.Persistance.infinity\GT.Persistance.infinity.csproj" />
     <ProjectReference Include="..\GT.Repository.infinity\GT.Repository.infinity.csproj" />
     <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Implementation\" />
-    <Folder Include="Model\Study\" />
   </ItemGroup>
 
 </Project>
