--- a/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
+++ b/Backend/GuneyTeletip/GT.DataService/GT.DataService.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
     <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
+    <ProjectReference Include="..\GT.Data.Models\GT.Data.Models.csproj" />
     <ProjectReference Include="..\GT.Persistance\GT.Persistance.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
     <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
