--- a/Backend/GuneyTeletip/GT.Repository.infinity/GT.Repository.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.Repository.infinity/GT.Repository.infinity.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Data.Models\GT.Data.Models.csproj" />
     <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
     <ProjectReference Include="..\Util.Extensions\Util.Extensions.csproj" />
     <ProjectReference Include="..\Util.Grid\Util.Grid.csproj" />
