Job Timer Logger feature added

--- a/Backend/GuneyTeletip/GT.Job/GT.Job.csproj
+++ b/Backend/GuneyTeletip/GT.Job/GT.Job.csproj
@@ -9,10 +9,13 @@
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
     <ProjectReference Include="..\Util.Job\Util.Job.csproj" />
+    <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Implementation\Private\" />
+    <Folder Include="Interface\Private\" />
+    <Folder Include="Interface\Public\" />
   </ItemGroup>
 
 </Project>
