--- a/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
+    <ProjectReference Include="..\Util.Process\Util.Process.csproj" />
   </ItemGroup>
 
 
