KosService makekos test added

--- a/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
@@ -11,10 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
+    <ProjectReference Include="..\KOS.TeletipKos\KOS.TeletipKos.csproj" />
     <ProjectReference Include="..\Util.Process\Util.Process.csproj" />
   </ItemGroup>
 
