Logging capable Multiple KosService added

--- a/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
+++ b/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
     <ProjectReference Include="..\Util.Process\Util.Process.csproj" />
   </ItemGroup>
 
