--- a/Backend/GuneyTeletip/GT.Persistance.infinity/GT.Persistance.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.Persistance.infinity/GT.Persistance.infinity.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
