appSetting ve kos_study postgree Modelleri Eklendi.

--- a/Backend/GuneyTeletip/GT.BAL.Infinity.DataSynronizer/GT.BAL.Infinity.DataSynronizer.csproj
+++ b/Backend/GuneyTeletip/GT.BAL.Infinity.DataSynronizer/GT.BAL.Infinity.DataSynronizer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
     <ProjectReference Include="..\GT.Repository\GT.Repository.csproj" />
