--- a/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
+++ b/Backend/GuneyTeletip/GT.Repository/GT.Repository.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.Data.Models\GT.Data.Models.csproj" />
     <ProjectReference Include="..\GT.Persistance.Domain\GT.Persistance.Domain.csproj" />
     <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
