--- a/Backend/GuneyTeletip/Gt.Data.Test/Gt.Data.Test.csproj
+++ b/Backend/GuneyTeletip/Gt.Data.Test/Gt.Data.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\App.Data.Service\App.Data.Service.csproj" />
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
   </ItemGroup>
