--- a/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
+++ b/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
     <ProjectReference Include="..\Util.Process\Util.Process.csproj" />
   </ItemGroup>
