Error Handling servisi eklendi. Fontlar eklendi.

--- a/guneyteletipUI/angular.json
+++ b/guneyteletipUI/angular.json
@@ -30,16 +30,17 @@
               {
                 "input": "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
               },
-      
+
               {
                 "input": "node_modules/ngx-toastr/toastr.css"
               },
 
 
               "src/styles.css",
-              "./node_modules/font-awesome/css/font-awesome.css" 
-              
-              
+              "src/assets/fonts/font.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
+
+
             ],
             "scripts": []
           },
