--- a/Backend/GuneyTeletip/GT.BAL.TeletipKos/GT.BAL.TeletipKos.csproj
+++ b/Backend/GuneyTeletip/GT.BAL.TeletipKos/GT.BAL.TeletipKos.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
+    <ProjectReference Include="..\GT.Job\GT.Job.csproj" />
     <ProjectReference Include="..\KOS.TeletipKos\KOS.TeletipKos.csproj" />
     <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
   </ItemGroup>
