versiyon 6 düzenleme yapıldı versiyon 5 in.

--- a/Backend/GuneyTeletip/GT.BAL.Test/GT.BAL.Test.csproj
+++ b/Backend/GuneyTeletip/GT.BAL.Test/GT.BAL.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GT.BAL.TeletipKos\GT.BAL.TeletipKos.csproj" />
     <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.Job\GT.Job.csproj" />
     <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
