--- a/Backend/GuneyTeletip/GT.Job/GT.Job.csproj
+++ b/Backend/GuneyTeletip/GT.Job/GT.Job.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Implementation\Public\" />
     <Folder Include="Interface\Private\" />
     <Folder Include="Interface\Public\" />
   </ItemGroup>
