--- a/Backend/GuneyTeletip/GT.Core.Settings/GT.Core.Settings.csproj
+++ b/Backend/GuneyTeletip/GT.Core.Settings/GT.Core.Settings.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GT.Core.Settings.Global\GT.Core.Settings.Global.csproj" />
+  </ItemGroup>
+
 </Project>
