--- a/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "StudyPostgre": "Host=85.95.238.211;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9002",
-    "InfinityOracle": "User Id=test_user;Password=protek_oracle_2020;Data Source=85.95.238.211:9003/xe;"
+    "StudyPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009",
+    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.202.108.120:1521/spectra;"
   }
 }
