--- a/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
+++ b/Backend/GuneyTeletip/KOS.TeletipKos/KOS.TeletipKos.csproj
@@ -6,8 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
-    <ProjectReference Include="..\Util.Logger\Util.Logger.csproj" />
-    <ProjectReference Include="..\Util.Process\Util.Process.csproj" />
+    <ProjectReference Include="..\Util.ProcessUtil\Util.ProcessUtil.csproj" />
   </ItemGroup>
 
 </Project>
