--- a/Backend/GuneyTeletip/Util.Grid/Util.Grid.csproj
+++ b/Backend/GuneyTeletip/Util.Grid/Util.Grid.csproj
@@ -1,72 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3908C804-B44D-4A62-B62F-40F1C66CFF1E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Util.Grid</RootNamespace>
-    <AssemblyName>Util.Grid</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\Util.Expression\Util.Expression.csproj" />
+    <ProjectReference Include="..\Util.Reflection\Util.Reflection.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DataEntityIDAttribute.cs" />
-    <Compile Include="FilterBase.cs" />
-    <Compile Include="FilterPagingBase.cs" />
-    <Compile Include="Gridable.cs" />
-    <Compile Include="IDeselectable.cs" />
-    <Compile Include="IPaging.cs" />
-    <Compile Include="Pager.cs" />
-    <Compile Include="Paging.cs" />
-    <Compile Include="PagingResult.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectedItemListUI.cs" />
-    <Compile Include="Sorting.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Util.Expression\Util.Expression.csproj">
-      <Project>{84ec8821-3bd3-419b-a578-6e3ff7c0ca65}</Project>
-      <Name>Util.Expression</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Util.Extensions\Util.Extensions.csproj">
-      <Project>{7a7b34d2-82bb-4a23-8f60-af0c2532c6b0}</Project>
-      <Name>Util.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Util.Reflection\Util.Reflection.csproj">
-      <Project>{fdf072d3-ef88-4351-b611-0a0c7236bb60}</Project>
-      <Name>Util.Reflection</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
