--- a/Backend/GuneyTeletip/GT.Persistance.infinity/GT.Persistance.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.Persistance.infinity/GT.Persistance.infinity.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Persistance\Core.Persistance.csproj" />
+    <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.Persistance.Domain.infinity\GT.Persistance.Domain.infinity.csproj" />
   </ItemGroup>
 
