--- a/Backend/GuneyTeletip/GT.Persistance.Domain.infinity/GT.Persistance.Domain.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.Persistance.Domain.infinity/GT.Persistance.Domain.infinity.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.70" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models2\" />
+  </ItemGroup>
+
 </Project>
