--- a/Backend/GuneyTeletip/GT.Persistance.Domain/GT.Persistance.Domain.csproj
+++ b/Backend/GuneyTeletip/GT.Persistance.Domain/GT.Persistance.Domain.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
