--- a/Backend/GuneyTeletip/GT.BAL.Test/GT.BAL.Test.csproj
+++ b/Backend/GuneyTeletip/GT.BAL.Test/GT.BAL.Test.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\GT.Job\GT.Job.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
