--- a/Backend/GuneyTeletip/Gt.Data.Test/Gt.Data.Test.csproj
+++ b/Backend/GuneyTeletip/Gt.Data.Test/Gt.Data.Test.csproj
@@ -18,6 +18,10 @@
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dmc4chee\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
