--- a/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
+++ b/Backend/GuneyTeletip/GT.DataService.infinity/GT.DataService.infinity.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.Data.Controller\GT.Data.Controller.csproj" />
     <ProjectReference Include="..\GT.Data.Models\GT.Data.Models.csproj" />
+    <ProjectReference Include="..\GT.Persistance.Domain\GT.Persistance.Domain.csproj" />
     <ProjectReference Include="..\GT.Persistance.infinity\GT.Persistance.infinity.csproj" />
     <ProjectReference Include="..\GT.Repository.infinity\GT.Repository.infinity.csproj" />
   </ItemGroup>
