--- a/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/GT.UI.WebApi.csproj
@@ -20,5 +20,9 @@
     <ProjectReference Include="..\Util.Excel\Util.Excel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="upload\_User\" />
+  </ItemGroup>
+
 
 </Project>
