--- a/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "StudyPostgre": "Host=85.95.238.211;Database=guney_teletip_db;Username=postgres;Password=protek..psql..2020;Port=9002",
+    "StudyPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009",
     "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;"
   }
 }
-
