--- a/Backend/GuneyTeletip/GT.BAL.Infinity.DataSynronizer/GT.BAL.Infinity.DataSynronizer.csproj
+++ b/Backend/GuneyTeletip/GT.BAL.Infinity.DataSynronizer/GT.BAL.Infinity.DataSynronizer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Data.Service\App.Data.Service.csproj" />
+    <ProjectReference Include="..\Dcm4chee.DataService\Dcm4chee.DataService.csproj" />
     <ProjectReference Include="..\GT.Core.Settings\GT.Core.Settings.csproj" />
     <ProjectReference Include="..\GT.DataService.infinity\GT.DataService.infinity.csproj" />
     <ProjectReference Include="..\GT.DataService\GT.DataService.csproj" />
