--- a/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
@@ -2,6 +2,6 @@
   "ConnectionStrings": {
     "StudyPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009",
     "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
-    "PacsPostgre": "Host=85.95.239.134;Database=pacsdb;Username=pacs;Password=pacs;Port=5432"
+    "PacsPostgre": "Host=85.95.239.134;Database=pacsdb;Username=pacs;Password=pacs;Port=5432",
   }
 }
