--- a/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
@@ -1,7 +1,26 @@
+//{
+//  "ConnectionStrings": {
+//    "StudyPostgre": "Host=10.16.0.34;Database=protek_teletip;Username=pacs;Password=pacs;Port=5432",
+//    "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.16.0.34;Database=pacsdb;Username=pacs;Password=pacs;Port=5432"
+//  }
+//}
+
+
+//{
+//  "ConnectionStrings": {
+//    "StudyPostgre": "Host=10.34.12.70;Database=protek_teletip;Username=pacs;Password=pacs;Port=5432",
+//    "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.34.12.70;Database=pacsdb;Username=pacs;Password=pacs;Port=5432"
+//  }
+//}
+
+
+
 {
   "ConnectionStrings": {
-    "StudyPostgre": "Host=10.16.0.34;Database=protek_teletip;Username=pacs;Password=pacs;Port=5432",
+    "StudyPostgre": "Host=85.95.242.26;Database=protek_teletip;Username=pacs;Password=pacs;Port=5432",
     "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
-    "PacsPostgre": "Host=10.16.0.34;Database=pacsdb;Username=pacs;Password=pacs;Port=5432"
+    "PacsPostgre": "Host=85.95.242.26;Database=pacsdb;Username=pacs;Password=pacs;Port=5432"
   }
 }
