--- a/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
@@ -1,9 +1,45 @@
+//{
+//  "ConnectionStrings": {
+
+//    "StudyPostgre": "Host=10.201.65.68;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+//    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.201.65.39:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.201.65.68;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
+
+//  }
+//}
+
+
+//{
+//  "ConnectionStrings": {
+
+//    "StudyPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+//    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.218.160.44:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
+
+//  }
+//}
+
 {
   "ConnectionStrings": {
 
-    "StudyPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009",
-    "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
-    "PacsPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009"
+    "StudyPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.231.128.114:1521/SPECTRA;",
+    "PacsPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
 
   }
 }
+
+//{
+//  "ConnectionStrings": {
+
+//    "StudyPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009",
+//    "InfinityOracle": "User Id=Protek;Password=Pro_2020_tek;Data Source=10.202.108.53:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.202.108.127;Database=guney_teletip_db;Username=test_protek;Password=test123;Port=9009"
+
+//  }
+//}
+
+
+
+
+
