en son hali genel guncelleme.Musab

--- a/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
+++ b/Backend/GuneyTeletip/GT.UI.WebApi/appSettings.json
@@ -11,23 +11,34 @@
 
 //{
 //  "ConnectionStrings": {
-
-//    "StudyPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
-//    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.218.160.44:1521/SPECTRA;",
-//    "PacsPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
-
+//    "StudyPostgre": "Host=10.218.158.61;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+//    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.218.158.7:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.218.158.61;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
 //  }
 //}
+
+
+
 
 {
   "ConnectionStrings": {
 
-    "StudyPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
-    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.231.128.114:1521/SPECTRA;",
-    "PacsPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
+    "StudyPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.218.160.44:1521/SPECTRA;",
+    "PacsPostgre": "Host=10.218.160.49;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
 
   }
 }
+
+//{
+//  "ConnectionStrings": {
+
+//    "StudyPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320",
+//    "InfinityOracle": "User Id=protek;Password=Pro_2020_tek;Data Source=10.231.128.114:1521/SPECTRA;",
+//    "PacsPostgre": "Host=10.201.128.70;Database=guney_teletip_db;Username=postgres;Password=Prt*2021+-;Port=54320"
+
+//  }
+//}
 
 //{
 //  "ConnectionStrings": {
